argocd/base/argo-cd-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-web-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 100M
spec:
  tls:
    - hosts:
      - argo.cloud-nation.club
      secretName: argocd-tls-argo
  rules:
  - host: argo.cloud-nation.club
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80
