argocd/base/http01-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http01
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: argo.cloud-nation.club
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80
